# LainGame

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GameProject.sln  GameProject.vcxproj  GameProject.vcxproj.filters  LainGame.cpp  LainGame.h  Makefile  README.md  meson.build  start.sh
data/: default.super  settings.cfg
dependencies/glad/: glad.h
editor/: Makefile
include/: game.hpp  gameobject.hpp  menu.hpp  parse.h  scene.hpp
modules/: .gitignore
src/: game.cpp  gameobject.cpp  glad.c  main.cpp  menu.cpp  parse.c  scene.cpp
